PipeWireSourceStream: work around crashes for pipewire < 0.3.49

Before 0.3.49 pw_stream_update_params will crash when the param list has
nullptr, but Neon only has 0.3.48. This adds a check to make sure the
param list doesn't have nullptr to fix the crash.

BUG: 492400
SENTRY: PLASMA-WORKSPACE-1R8
FIXED-IN: 6.2.1


(cherry picked from commit c88b4df25905f52fc7410ad66ba6a334c2be527f)

Co-authored-by: Fushan Wen <qydwhotmail@gmail.com>